--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <section class="main-ad">
-        <img src="halfPizza2.png" class="bg-Pizza">
+        <img src="halfPizza2.jpg" class="bg-Pizza">
         <div class="main-text">
           <h1>AUTHENTIC ITALIAN PIZZA</h1>
           <p>Try Pizza the Italian Way</p>
