--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="first-section">
     <nav class="navbar">
         <div class="container-fluid">
-          <a class=""><img src="yummy.png" class="yummy-header"></a>
-            <button class="btn btn1 btn-outline-danger" type="button">First Pizza Free!</button>
+          <a class="" href="https://mailchi.mp/51d2beb79bc3/yummy-pizza"><img src="yummy.png" class="yummy-header"></a>
+            <a href="https://mailchi.mp/51d2beb79bc3/yummy-pizza"><button class="btn btn1 btn-outline-danger" type="button">First Pizza Free!</button></a>
         </div>
     </nav>
     </div>
@@ -26,7 +26,7 @@
           <h1>AUTHENTIC ITALIAN PIZZA</h1>
           <p>Try Pizza the Italian Way</p>
           <p>Your First One On Us!</p>
-          <button type="button" class=" btn btn2">Sign Up Now!</button>
+          <a href="https://mailchi.mp/51d2beb79bc3/yummy-pizza"><button type="button" class=" btn btn2">Sign Up Now!</button></a>
         </div>
       </section>
     </main>
