added test class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
     <div class="first-section">
-    <nav class="navbar">
+    <nav class="navbar test-class">
         <div class="container-fluid">
           <a class="" href="https://mailchi.mp/51d2beb79bc3/yummy-pizza"><img src="yummy.png" class="yummy-header"></a>
             <a href="https://mailchi.mp/51d2beb79bc3/yummy-pizza"><button class="btn btn1 btn-outline-danger" type="button">First Pizza Free!</button></a>
